fix: fix scrollbar in articles

--- a/src/layout/page.css
+++ b/src/layout/page.css
@@ -68,7 +68,10 @@
 }
 
 .articles {
-  max-width: 650px;
+  & > * {
+    max-width: 650px;
+  }
+
   & > h1,
   & > h2,
   & > h3 {
